Got the Onclick to work and set up each spot with a unique id. then pulled their location using console log by breaking the string up as an array to display the col/row

--- a/game.html
+++ b/game.html
@@ -21,60 +21,60 @@
             <th class="centerTile">
                 <table class="gameboard">
                     <tr class="row1">
-                        <th class="cleartile">1</th>
-                        <th class="cleartile">2</th>
-                        <th class="cleartile">3</th>
-                        <th class="cleartile">4</th>
-                        <th class="cleartile">5</th>
-                        <th class="cleartile">6</th>
+                        <th class="cleartile" id='65'></th>
+                        <th class="cleartile" id="64"></th>
+                        <th class="cleartile" id="63"></th>
+                        <th class="cleartile" id="62"></th>
+                        <th class="cleartile" id="61"></th>
+                        <th class="cleartile" id="60"></th>
                     </tr>
                     <tr class="row2">
-                        <th class="cleartile">1</th>
-                        <th class="cleartile">2</th>
-                        <th class="cleartile">3</th>
-                        <th class="cleartile">4</th>
-                        <th class="cleartile">5</th>
-                        <th class="cleartile">6</th>
+                        <th class="cleartile" id="50"></th>
+                        <th class="cleartile" id="51"></th>
+                        <th class="cleartile" id="52"></th>
+                        <th class="cleartile" id="53"></th>
+                        <th class="cleartile" id="54"></th>
+                        <th class="cleartile" id="55"></th>
                     </tr>
                     <tr class="row3">
-                        <th class="cleartile">1</th>
-                        <th class="cleartile">2</th>
-                        <th class="cleartile">3</th>
-                        <th class="cleartile">4</th>
-                        <th class="cleartile">5</th>
-                        <th class="cleartile">6</th>
+                        <th class="cleartile" id="40"></th>
+                        <th class="cleartile" id="41"></th>
+                        <th class="cleartile" id="42"></th>
+                        <th class="cleartile" id="43"></th>
+                        <th class="cleartile" id="44"></th>
+                        <th class="cleartile" id="45"></th>
                     </tr>
                     <tr class="row4">
-                        <th class="cleartile">1</th>
-                        <th class="cleartile">2</th>
-                        <th class="cleartile">3</th>
-                        <th class="cleartile">4</th>
-                        <th class="cleartile">5</th>
-                        <th class="cleartile">6</th>
+                        <th class="cleartile" id="30"></th>
+                        <th class="cleartile" id="31"></th>
+                        <th class="cleartile" id="32"></th>
+                        <th class="cleartile" id="33"></th>
+                        <th class="cleartile" id="34"></th>
+                        <th class="cleartile" id="35"></th>
                     </tr>
                     <tr class="row5">
-                        <th class="cleartile">1</th>
-                        <th class="cleartile">2</th>
-                        <th class="cleartile">3</th>
-                        <th class="cleartile">4</th>
-                        <th class="cleartile">5</th>
-                        <th class="cleartile">6</th>
+                        <th class="cleartile" id="20"></th>
+                        <th class="cleartile" id="21"></th>
+                        <th class="cleartile" id="22"></th>
+                        <th class="cleartile" id="23"></th>
+                        <th class="cleartile" id="24"></th>
+                        <th class="cleartile" id="25"></th>
                     </tr>
                     <tr class="row6">
-                        <th class="cleartile">1</th>
-                        <th class="cleartile">2</th>
-                        <th class="cleartile">3</th>
-                        <th class="cleartile">4</th>
-                        <th class="cleartile">5</th>
-                        <th class="cleartile">6</th>
+                        <th class="cleartile" id="10"></th>
+                        <th class="cleartile" id="11"></th>
+                        <th class="cleartile" id="12"></th>
+                        <th class="cleartile" id="13"></th>
+                        <th class="cleartile" id="14"></th>
+                        <th class="cleartile" id="15"></th>
                     </tr>
                     <tr class="row7">
-                        <th class="cleartile">1</th>
-                        <th class="cleartile">2</th>
-                        <th class="cleartile">3</th>
-                        <th class="cleartile">4</th>
-                        <th class="cleartile">5</th>
-                        <th class="cleartile">6</th>
+                        <th class="cleartile" id="00"></th>
+                        <th class="cleartile" id="01"></th>
+                        <th class="cleartile" id="02"></th>
+                        <th class="cleartile" id="03"></th>
+                        <th class="cleartile" id="04"></th>
+                        <th class="cleartile" id="05"></th>
                     </tr>
                                                                                                         
                 </table>
