Started setting up array tables and player name input. having problems getting it to load on the html

--- a/game.html
+++ b/game.html
@@ -10,9 +10,23 @@
 <body>
     <table class="mainBackground">
         <tr class="firstrow">
-            <th class="player1info">Player 1 name with color under it</th>
+            <th class="player1infoth">
+                <table class="player1infotable">
+                    <tr>
+                        <th class="player1NameDisplay">Player 1</th>
+                    </tr>
+                    <th class="player1ColorDisplay"></th>
+                </table>
+            </th>
             <th class="empty">Expanded for game board</th>
-            <th class="player2info">Player 2 name with color under it</th>
+            <th class="player2info">
+                    <table class="player1infotable">
+                            <tr>
+                                <th class="player2NameDisplay">Player 2</th>
+                            </tr>
+                            <th class="player2ColorDisplay"></th>
+                        </table>
+            </th>
             
         </tr>
         <tr class="middlerow">
