Got the name prompt to succesfully change both the top and bottom trackers

--- a/game.html
+++ b/game.html
@@ -97,9 +97,27 @@
             
         </tr>
         <tr class= "lastrow">
-            <th class="player1Movertrack">Player One Move Tracker</th>
+            <th class="player1Movertrack">
+                <table class = "tablePlayer1MoveTracker">
+                    <tr>
+                        <th class = "nameTablePlayer1MoveTracker">Player 1</th>
+                    </tr>
+                    <tr>
+                        <th class = "movesTablePlayer1MoveTracker">Move</th>
+                    </tr>
+                </table>
+            </th>
             <th class="scoreBoard">table inside that has both player names and under them has scores</th>
-            <th class="player2Movertrack">Player Two Move Tracker</th>
+            <th class="player2Movertrack">
+                <table class = "tablePlayer2MoveTracker">
+                    <tr>
+                        <th class = "nameTablePlayer2MoveTracker">Player 2</th>
+                    </tr>
+                    <tr>
+                        <th class = "movesTablePlayer2MoveTracker">Move</th>
+                    </tr>
+                </table>
+            </th>
             </tr>
     </table>
     
