Got the moves tracker to work

--- a/game.html
+++ b/game.html
@@ -103,7 +103,7 @@
                         <th class = "nameTablePlayer1MoveTracker">Player 1</th>
                     </tr>
                     <tr>
-                        <th class = "movesTablePlayer1MoveTracker">Move</th>
+                        <th class = "movesTablePlayer1MoveTracker">0</th>
                     </tr>
                 </table>
             </th>
@@ -114,7 +114,7 @@
                         <th class = "nameTablePlayer2MoveTracker">Player 2</th>
                     </tr>
                     <tr>
-                        <th class = "movesTablePlayer2MoveTracker">Move</th>
+                        <th class = "movesTablePlayer2MoveTracker">0</th>
                     </tr>
                 </table>
             </th>
