--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/gamestyle.css">
 </head>
 <body>
     <table class="mainBackground">
@@ -18,7 +18,7 @@
                     <th class="player1ColorDisplay"></th>
                 </table>
             </th>
-            <th class="empty"></th>
+            <th class="empty"><a href="readme.md">Read Me For Project 1</a></th>
             <th class="player2info">
                     <table class="player1infotable">
                             <tr>
