almost final commit!! game logic works and scoreboard updates.

--- a/game.html
+++ b/game.html
@@ -112,9 +112,14 @@
                     <tr>
                         <th class = "movesTablePlayer1MoveTracker">0</th>
                     </tr>
+                    <tr><th>Wins</th>
+                    </tr>
+                    <tr>
+                        <th class = "player1WinsTracker">0</th>
+                    </tr>
                 </table>
             </th>
-            <th class="scoreBoard">table inside that has both player names and under them has scores</th>
+            <th class=""></th>
             <th class="player2Movertrack">
                 <table class = "tablePlayer2MoveTracker">
                     <tr>
@@ -122,6 +127,11 @@
                     </tr>
                     <tr>
                         <th class = "movesTablePlayer2MoveTracker">0</th>
+                    </tr>
+                    <tr><th>Wins</th>
+                    </tr>
+                    <tr>
+                        <th class = "player2WinsTracker">0</th>
                     </tr>
                 </table>
             </th>
